# daily-userbot

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
config/: __init__.py  logger.py  settings.py
src/: app.py
src/database/: base.py
src/database/mongo/: __init__.py  mongo-init.js  mongo.py
src/plugins/: autoresponse.py
